--- a/src/Smart.Design.Library.Showcase.WebApp/wwwroot/SmartLib/scss/_c-brand.scss
+++ b/src/Smart.Design.Library.Showcase.WebApp/wwwroot/SmartLib/scss/_c-brand.scss
@@ -22,7 +22,7 @@
     }
 
     svg {
-        width: 74px;
+        width: 82px;
     }
 
     &--xsmall {
@@ -40,7 +40,7 @@
 
         &--xsmall {
             height: 2.6rem;
-            margin-top: -4px;
+            margin-top: -10px;
         }
     }
 }
